--- a/Day7/js-dom/index.html
+++ b/Day7/js-dom/index.html
@@ -22,14 +22,18 @@
             </div>
         </div>
     </div> -->
-    <div>
+    <!-- <div>
         <input id="imageURL" type="text" placeholder="Enter Image URl"/>
         <input id="cityName" type="text" placeholder="Enter City Name"/>
         <input id="cityDescription" type="text" placeholder="Enter City Description"/>
         <button id="addCity">Add City</button>
+    </div> -->
+    <div>
+        <input  id="searchInput" type="text" placeholder="Search City"/>
+        <button id="searchBtn">Search</button>
+        <button id="clearBtn">Clear</button>
     </div>
     <div id="city-container">
-
     </div>
     <script src="./index.js"></script>
 </body>
