--- a/Day7/js-dom/index.html
+++ b/Day7/js-dom/index.html
@@ -30,8 +30,8 @@
     </div> -->
     <div>
         <input  id="searchInput" type="text" placeholder="Search City"/>
-        <button id="searchBtn">Search</button>
-        <button id="clearBtn">Clear</button>
+        <!-- <button id="searchBtn">Search</button> -->
+        <!-- <button id="clearBtn">Clear</button> -->
     </div>
     <div id="city-container">
     </div>
