--- a/Day7/js-dom/index.html
+++ b/Day7/js-dom/index.html
@@ -35,6 +35,11 @@
     </div>
     <div id="city-container">
     </div>
+    <div id="root"></div>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="./index.js"></script>
+    <script type="text/babel" src="./script1.js"></script>
 </body>
 </html>
